# jlox-example

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
src/: CMakeLists.txt  expected.hpp  generator.hpp  interpreter.cpp  interpreter.hpp  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  parser_test.cpp  scanner_test.cpp
